network and agent

--- a/ddqn/nbs/pong_wrapper.ipynb
+++ b/ddqn/nbs/pong_wrapper.ipynb
@@ -103,7 +103,7 @@
     "    Wrapper for the environment provided by Openai Gym\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, env_name, no_op_steps=10, history_length=4):\n",
+    "    def __init__(self, env_name: str, no_op_steps: int = 10, history_length: int = 4):\n",
     "        self.env = gym.make(env_name)\n",
     "        self.no_op_steps = no_op_steps\n",
     "        self.history_length = 4 # number of frames to put together (we need dynamic to see where the ball is going)\n",
@@ -111,7 +111,7 @@
     "        self.state = None\n",
     "        self.last_lives = 0\n",
     "\n",
-    "    def reset(self, evaluation=False):\n",
+    "    def reset(self, evaluation: bool = False):\n",
     "        \"\"\"Resets the environment\n",
     "\n",
     "        Arguments:\n",
@@ -129,7 +129,7 @@
     "        # For the initial state, we stack the first frame four times\n",
     "        self.state = np.repeat(process_image(self.frame), self.history_length, axis=2)\n",
     "\n",
-    "    def step(self, action, render_mode=None):\n",
+    "    def step(self, action: int, render_mode=None):\n",
     "        \"\"\"\n",
     "        Arguments:\n",
     "            action: An integer describe action to take\n",
