--- a/ddqn/nbs/dddqn_agent.ipynb
+++ b/ddqn/nbs/dddqn_agent.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "%%write_and_run -a ../src/dddqn_agent.py\n",
     "\n",
-    "class dddqn_agent(object):\n",
+    "class DDDQN_AGENT(object):\n",
     "    def __init__(self,\n",
     "                 dqn,\n",
     "                 target_dqn,\n",
@@ -64,7 +64,6 @@
     "        self.batch_size = batch_size\n",
     "\n",
     "        self.replay_buffer = replay_buffer\n",
-    "        self.use_per = use_per\n",
     "\n",
     "        # Epsilon information\n",
     "        self.eps_initial = eps_initial\n",
@@ -119,12 +118,12 @@
     "        \"\"\"\n",
     "        self.replay_buffer.add_experience(action, frame, reward, terminal, clip_reward)\n",
     "\n",
-    "    def learn(self, batch_size, gamma, frame_number, priority_scale=1.0):\n",
+    "    def learn(self, batch_size, gamma):\n",
     "        \"\"\"\n",
     "        Sample a batch and use it to improve the DQN\n",
     "        \"\"\"\n",
     "\n",
-    "        states, actions, rewards, new_states, terminal_flags = self.replay_buffer.get_minibatch(batch_size=self.batch_size, priority_scale=priority_scale)\n",
+    "        states, actions, rewards, new_states, terminal_flags = self.replay_buffer.get_minibatch(batch_size=self.batch_size)\n",
     "\n",
     "        # Main DQN estimates best action in new states\n",
     "        arg_q_max = self.DQN.predict(new_states).argmax(axis=1)\n",
@@ -140,7 +139,7 @@
     "        with tf.GradientTape() as tape:\n",
     "            q_values = self.DQN(states)\n",
     "\n",
-    "            one_hot_actions = tf.keras.utils.to_categorical(actions, self.n_actions, dtype=np.float32)  # using tf.one_hot causes strange errors\n",
+    "            one_hot_actions = tf.keras.utils.to_categorical(actions, self.n_actions, dtype=np.float32)\n",
     "            Q = tf.reduce_sum(tf.multiply(q_values, one_hot_actions), axis=1)\n",
     "\n",
     "            error = Q - target_q\n",
@@ -166,8 +165,8 @@
     "        # Save replay buffer\n",
     "        self.replay_buffer.save(folder_name + '/replay-buffer')\n",
     "\n",
-    "        # Save meta\n",
-    "        with open(folder_name + '/meta.json', 'w+') as f:\n",
+    "        # Save info\n",
+    "        with open(folder_name + 'info.json', 'w+') as f:\n",
     "            f.write(json.dumps({**{'buff_count': self.replay_buffer.count, 'buff_curr': self.replay_buffer.current}, **kwargs}))  # save replay_buffer information and any other information\n",
     "\n",
     "    def load(self, folder_name, load_replay_buffer=True):\n",
@@ -186,16 +185,16 @@
     "        if load_replay_buffer:\n",
     "            self.replay_buffer.load(folder_name + '/replay-buffer')\n",
     "\n",
-    "        # Load meta\n",
-    "        with open(folder_name + '/meta.json', 'r') as f:\n",
-    "            meta = json.load(f)\n",
+    "        # Load info\n",
+    "        with open(folder_name + '/info.json', 'r') as f:\n",
+    "            info = json.load(f)\n",
     "\n",
     "        if load_replay_buffer:\n",
-    "            self.replay_buffer.count = meta['buff_count']\n",
-    "            self.replay_buffer.current = meta['buff_curr']\n",
+    "            self.replay_buffer.count = info['buff_count']\n",
+    "            self.replay_buffer.current = info['buff_curr']\n",
     "\n",
-    "        del meta['buff_count'], meta['buff_curr']  # we don't want to return this information\n",
-    "        return meta"
+    "        del info['buff_count'], info['buff_curr']  # we don't want to return this information\n",
+    "        return info"
    ]
   },
   {
