--- a/ddqn/nbs/dddqn_agent.ipynb
+++ b/ddqn/nbs/dddqn_agent.ipynb
@@ -83,9 +83,9 @@
     "        self.DQN = dqn\n",
     "        self.target_dqn = target_dqn\n",
     "\n",
-    "    def exploration_exploitation_scheduler(self, frame_number, state, evaluation=False):\n",
+    "    def get_action(self, frame_number, state, evaluation=False):\n",
     "        \"\"\"\n",
-    "        Get the appropriate epsilon value from a given frame number and return the action to take\n",
+    "        Get the appropriate epsilon value from a given frame number and return the action to take (ExplorationExploitationScheduler)\n",
     "        \"\"\"\n",
     "        # Calculate epsilon based on the frame number\n",
     "        \n",
