--- a/ddqn/nbs/replay_buffer.ipynb
+++ b/ddqn/nbs/replay_buffer.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "        self.reward_type = reward_type\n",
     "\n",
-    "    def add_experience(self, action, frame, reward, terminal, clip_reward=True):\n",
+    "    def add_experience(self, action, frame, reward, terminal, clip_reward=True, reward_type=\"integer\"):\n",
     "        \"\"\"Saves a transition to the replay buffer\n",
     "\n",
     "        Arguments:\n",
