--- a/ddqn/nbs/main.ipynb
+++ b/ddqn/nbs/main.ipynb
@@ -17,6 +17,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import wandb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%write_and_run ../src/main.py\n",
     "#!/usr/bin/python\n",
     "\n",
@@ -36,7 +45,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = dict (\n",
+    "  learning_rate = 0.00025,\n",
+    "  batch_size = 32,\n",
+    "  architecture = \"DDDQN\",\n",
+    "  infra = \"Azure\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33manton-ai\u001b[0m (use `wandb login --relogin` to force relogin)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                Tracking run with wandb version 0.10.12<br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">giddy-rain-3</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://wandb.ai/anton-ai/tensorflow2_pong\" target=\"_blank\">https://wandb.ai/anton-ai/tensorflow2_pong</a><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/anton-ai/tensorflow2_pong/runs/v60s0ni0\" target=\"_blank\">https://wandb.ai/anton-ai/tensorflow2_pong/runs/v60s0ni0</a><br/>\n",
+       "                Run data is saved locally in <code>/Users/anton/Projects/reinforcement_learning/ddqn/nbs/wandb/run-20210102_121832-v60s0ni0</code><br/><br/>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<h1>Run(v60s0ni0)</h1><p></p><iframe src=\"https://wandb.ai/anton-ai/tensorflow2_pong/runs/v60s0ni0\" style=\"border:none;width:100%;height:400px\"></iframe>"
+      ],
+      "text/plain": [
+       "<wandb.sdk.wandb_run.Run at 0x7fa4ab51ff70>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wandb.init(\n",
+    "  project=\"tensorflow2_pong\",\n",
+    "  tags=[\"DDDQN\", \"CNN\", \"RL\"],\n",
+    "  config=config,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,19 +174,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Game number: 000010  Frame number: 00009647  Average reward: -20.1  Time taken: 0.7s\n",
-      "Game number: 000020  Frame number: 00018625  Average reward: -20.4  Time taken: 0.8s\n",
-      "Game number: 000030  Frame number: 00028277  Average reward: -20.2  Time taken: 1.1s\n",
-      "Game number: 000040  Frame number: 00037145  Average reward: -20.5  Time taken: 0.7s\n",
-      "Game number: 000050  Frame number: 00046787  Average reward: -20.0  Time taken: 0.9s\n",
-      "Game number: 000060  Frame number: 00055523  Average reward: -20.5  Time taken: 85.9s\n"
+      "Game number: 000010  Frame number: 00009455  Average reward: -20.1  Time taken: 0.8s\n",
+      "Game number: 000020  Frame number: 00019022  Average reward: -20.4  Time taken: 0.8s\n",
+      "Game number: 000030  Frame number: 00028656  Average reward: -19.7  Time taken: 0.8s\n",
+      "Game number: 000040  Frame number: 00037995  Average reward: -20.1  Time taken: 0.7s\n",
+      "Game number: 000050  Frame number: 00047434  Average reward: -20.5  Time taken: 0.7s\n",
+      "Game number: 000060  Frame number: 00056405  Average reward: -20.6  Time taken: 69.0s\n",
+      "Game number: 000070  Frame number: 00066334  Average reward: -19.8  Time taken: 84.7s\n"
      ]
     },
     {
@@ -130,7 +206,7 @@
       "Traceback (most recent call last):\n",
       "  File \"/Users/anton/.conda/envs/reinforcement_learning/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3418, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-7-68b0696187d4>\", line 22, in <module>\n",
+      "  File \"<ipython-input-9-9f0af1810c77>\", line 22, in <module>\n",
       "    loss, _ = dddqn_agent.learn(BATCH_SIZE, gamma=DISCOUNT_FACTOR)\n",
       "  File \"../src/dddqn_agent.py\", line 115, in learn\n",
       "    model_gradients = tape.gradient(loss, self.DQN.trainable_variables)\n",
@@ -168,14 +244,14 @@
       "    filename = getsourcefile(frame) or getfile(frame)\n",
       "  File \"/Users/anton/.conda/envs/reinforcement_learning/lib/python3.8/inspect.py\", line 708, in getsourcefile\n",
       "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
-      "  File \"/Users/anton/.conda/envs/reinforcement_learning/lib/python3.8/inspect.py\", line 751, in getmodule\n",
-      "    f = getabsfile(module)\n",
-      "  File \"/Users/anton/.conda/envs/reinforcement_learning/lib/python3.8/inspect.py\", line 720, in getabsfile\n",
-      "    _filename = getsourcefile(object) or getfile(object)\n",
-      "  File \"/Users/anton/.conda/envs/reinforcement_learning/lib/python3.8/inspect.py\", line 705, in getsourcefile\n",
-      "    if os.path.exists(filename):\n",
-      "  File \"/Users/anton/.conda/envs/reinforcement_learning/lib/python3.8/genericpath.py\", line 19, in exists\n",
-      "    os.stat(path)\n",
+      "  File \"/Users/anton/.conda/envs/reinforcement_learning/lib/python3.8/inspect.py\", line 754, in getmodule\n",
+      "    os.path.realpath(f)] = module.__name__\n",
+      "  File \"/Users/anton/.conda/envs/reinforcement_learning/lib/python3.8/posixpath.py\", line 391, in realpath\n",
+      "    path, ok = _joinrealpath(filename[:0], filename, {})\n",
+      "  File \"/Users/anton/.conda/envs/reinforcement_learning/lib/python3.8/posixpath.py\", line 425, in _joinrealpath\n",
+      "    if not islink(newpath):\n",
+      "  File \"/Users/anton/.conda/envs/reinforcement_learning/lib/python3.8/posixpath.py\", line 167, in islink\n",
+      "    st = os.lstat(path)\n",
       "KeyboardInterrupt\n"
      ]
     },
@@ -187,7 +263,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "    \u001b[0;31m[... skipping hidden 1 frame]\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-68b0696187d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mframe_number\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mUPDATE_FREQ\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mdddqn_agent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplay_buffer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mREPLAY_MEMORY_START_SIZE\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m                 \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdddqn_agent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDISCOUNT_FACTOR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m                 \u001b[0mloss_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-9-9f0af1810c77>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mframe_number\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mUPDATE_FREQ\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mdddqn_agent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplay_buffer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mREPLAY_MEMORY_START_SIZE\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m                 \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdddqn_agent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDISCOUNT_FACTOR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m                 \u001b[0mloss_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/Projects/reinforcement_learning/ddqn/src/dddqn_agent.py\u001b[0m in \u001b[0;36mlearn\u001b[0;34m(self, batch_size, gamma)\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 115\u001b[0;31m         \u001b[0mmodel_gradients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtape\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDQN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainable_variables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    116\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDQN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_gradients\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_gradients\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDQN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainable_variables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.conda/envs/reinforcement_learning/lib/python3.8/site-packages/tensorflow/python/eager/backprop.py\u001b[0m in \u001b[0;36mgradient\u001b[0;34m(self, target, sources, output_gradients, unconnected_gradients)\u001b[0m\n\u001b[1;32m   1079\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1080\u001b[0;31m     flat_grad = imperative_grad.imperative_grad(\n\u001b[0m\u001b[1;32m   1081\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_tape\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.conda/envs/reinforcement_learning/lib/python3.8/site-packages/tensorflow/python/eager/imperative_grad.py\u001b[0m in \u001b[0;36mimperative_grad\u001b[0;34m(tape, target, sources, output_gradients, sources_raw, unconnected_gradients)\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 71\u001b[0;31m   return pywrap_tfe.TFE_Py_TapeGradient(\n\u001b[0m\u001b[1;32m     72\u001b[0m       \u001b[0mtape\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_tape\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -239,7 +315,7 @@
     "\n",
     "            # Update target network\n",
     "            if frame_number % NETW_UPDATE_FREQ == 0 and frame_number > REPLAY_MEMORY_START_SIZE:\n",
-    "                agent.update_target_network()\n",
+    "                dddqn_agent.update_target_network()\n",
     "\n",
     "            # Break the loop when the game is over\n",
     "            if terminal:\n",
@@ -252,7 +328,7 @@
     "        if len(rewards) % 10 == 0:\n",
     "            # Print results\n",
     "            print(f'Game number: {str(len(rewards)).zfill(6)}  Frame number: {str(frame_number).zfill(8)}  Average reward: {np.mean(rewards[-10:]):0.1f}  Time taken: {(time.time() - start_time):.1f}s')\n",
-    "\n",
+    "        wandb.log({'Game number': len(rewards), '% Frame': round(frame_number / MAX_FRAMES, 2), \"Average reward\": round(np.mean(rewards[-10:]), 2)})\n",
     "    # Evaluation\n",
     "    terminal = True\n",
     "    eval_rewards = []\n",
@@ -281,6 +357,8 @@
     "    else:\n",
     "        # In case the first game is longer than EVAL_LENGHT\n",
     "        final_score = episode_reward_sum\n",
+    "    # Log score\n",
+    "    wandb.log({'% Frame': round(frame_number / MAX_FRAMES, 2), 'Evaluation score': final_score})\n",
     "    # Print score\n",
     "    print('Evaluation score:', final_score)\n",
     "    \n",
