final before trainint

--- a/ddqn/nbs/replay_buffer.ipynb
+++ b/ddqn/nbs/replay_buffer.ipynb
@@ -105,7 +105,7 @@
     "        indices = []\n",
     "        for i in range(batch_size):\n",
     "            while True:\n",
-    "                # Get a random number from history_length to maximum frame written with probabilities based on priority weights\n",
+    "                # Get a random number from history_length to maximum frame\n",
     "                index = random.randint(self.history_length, self.count - 1)\n",
     "\n",
     "                # We check that all frames are from same episode with the two following if statements.  If either are True, the index is invalid.\n",
