modified to run by terminal

--- a/dddqn/nbs/main.ipynb
+++ b/dddqn/nbs/main.ipynb
@@ -15,16 +15,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import wandb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'gym'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-fbfcb34ef8a8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../src/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgym\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'gym'"
+     ]
+    }
+   ],
    "source": [
     "%%write_and_run ../src/main.py\n",
     "#!/usr/bin/python\n",
@@ -40,68 +43,37 @@
     "from pong_wrapper import *\n",
     "from process_image import *\n",
     "from replay_buffer import *\n",
-    "from utilities import *"
+    "from utilities import *\n",
+    "import wandb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'wandb' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-20f00aab33e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m )\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m wandb.init(\n\u001b[0m\u001b[1;32m      9\u001b[0m   \u001b[0mproject\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"tensorflow2_pong\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m   \u001b[0mtags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"DDDQN\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"CNN\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"RL\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'wandb' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "%%write_and_run -a ../src/main.py\n",
+    "\n",
     "config = dict (\n",
     "  learning_rate = 0.00025,\n",
     "  batch_size = 32,\n",
     "  architecture = \"DDDQN\",\n",
-    "  infra = \"Local\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33manton-ai\u001b[0m (use `wandb login --relogin` to force relogin)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                Tracking run with wandb version 0.10.12<br/>\n",
-       "                Syncing run <strong style=\"color:#cdcd00\">dry-lion-7</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
-       "                Project page: <a href=\"https://wandb.ai/anton-ai/tensorflow2_pong\" target=\"_blank\">https://wandb.ai/anton-ai/tensorflow2_pong</a><br/>\n",
-       "                Run page: <a href=\"https://wandb.ai/anton-ai/tensorflow2_pong/runs/3b08h5gx\" target=\"_blank\">https://wandb.ai/anton-ai/tensorflow2_pong/runs/3b08h5gx</a><br/>\n",
-       "                Run data is saved locally in <code>/Users/anton/Projects/reinforcement_learning/ddqn/nbs/wandb/run-20210102_200636-3b08h5gx</code><br/><br/>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<h1>Run(3b08h5gx)</h1><p></p><iframe src=\"https://wandb.ai/anton-ai/tensorflow2_pong/runs/3b08h5gx\" style=\"border:none;width:100%;height:400px\"></iframe>"
-      ],
-      "text/plain": [
-       "<wandb.sdk.wandb_run.Run at 0x7fd4dace1c70>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "  infra = \"Ubuntu\"\n",
+    ")\n",
+    "\n",
     "wandb.init(\n",
     "  project=\"tensorflow2_pong\",\n",
     "  tags=[\"DDDQN\", \"CNN\", \"RL\"],\n",
@@ -111,14 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The environment has the following 6 actions: ['NOOP', 'FIRE', 'RIGHT', 'LEFT', 'RIGHTFIRE', 'LEFTFIRE']\n"
+     "ename": "NameError",
+     "evalue": "name 'PongWrapper' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-17af33e99924>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpong_wrapper\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPongWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mENV_NAME\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNO_OP_STEPS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The environment has the following {} actions: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpong_wrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction_space\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpong_wrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munwrapped\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_action_meanings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'PongWrapper' is not defined"
      ]
     }
    ],
@@ -131,9 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'build_q_network' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-b6c8c0098486>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mMAIN_DQN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_q_network\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpong_wrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction_space\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLEARNING_RATE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mINPUT_SHAPE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mTARGET_DQN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_q_network\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpong_wrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction_space\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mINPUT_SHAPE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mreplay_buffer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mReplayBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mMEMORY_SIZE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mINPUT_SHAPE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m dddqn_agent = DDDQN_AGENT(MAIN_DQN, TARGET_DQN, replay_buffer, pong_wrapper.env.action_space.n, \n",
+      "\u001b[0;31mNameError\u001b[0m: name 'build_q_network' is not defined"
+     ]
+    }
+   ],
    "source": [
     "%%write_and_run -a ../src/main.py\n",
     "\n",
@@ -149,16 +137,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'PATH_LOAD_MODEL' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-a8916f1f3dd4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mPATH_LOAD_MODEL\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Loading model and info from the folder '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPATH_LOAD_MODEL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0minfo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdddqn_agent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPATH_LOAD_MODEL\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLOAD_REPLAY_BUFFER\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'PATH_LOAD_MODEL' is not defined"
+     ]
+    }
+   ],
    "source": [
     "%%write_and_run -a ../src/main.py\n",
     "\n",
     "if PATH_LOAD_MODEL is not None:\n",
     "    start_time = time.time()\n",
-    "    print('Loading model and info from the folder ', LOAD_FROM)\n",
-    "    info = dddqn_agent.load(LOAD_FROM, LOAD_REPLAY_BUFFER)\n",
+    "    print('Loading model and info from the folder ', PATH_LOAD_MODEL)\n",
+    "    info = dddqn_agent.load(PATH_LOAD_MODEL, LOAD_REPLAY_BUFFER)\n",
     "\n",
     "    # Apply information loaded from meta\n",
     "    frame_number = info['frame_number']\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,6 +183,7 @@
     "def main():\n",
     "    global frame_number, rewards, loss_list\n",
     "    while frame_number < MAX_FRAMES:\n",
+    "        print(str(frame_number) + \"/\" + str(MAX_FRAMES))\n",
     "        epoch_frame = 0\n",
     "        while epoch_frame < EVAL_FREQUENCY:\n",
     "            start_time = time.time()\n",
@@ -224,9 +225,9 @@
     "        eval_rewards = []\n",
     "        evaluate_frame_number = 0\n",
     "\n",
-    "        for _ in range(EVAL_LENGTH):\n",
+    "        for _ in range(EVAL_STEPS):\n",
     "            if terminal:\n",
-    "                game_wrapper.reset(evaluation=True)\n",
+    "                pong_wrapper.reset(evaluation=True)\n",
     "                life_lost = True\n",
     "                episode_reward_sum = 0\n",
     "                terminal = False\n",
@@ -245,7 +246,7 @@
     "        if len(eval_rewards) > 0:\n",
     "            final_score = np.mean(eval_rewards)\n",
     "        else:\n",
-    "            # In case the first game is longer than EVAL_LENGHT\n",
+    "            # In case the first game is longer than EVAL_STEPS\n",
     "            final_score = episode_reward_sum\n",
     "        # Log evaluation score\n",
     "        wandb.log({'# Frame': frame_number, '% Frame': round(frame_number / MAX_FRAMES, 2), 'Evaluation score': final_score})\n",
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +280,8 @@
     "        # Save the model, I need this in order to save the networks, frame number, rewards and losses. \n",
     "        # if I want to stop the script and restart without training from the beginning\n",
     "        if PATH_SAVE_MODEL is None:\n",
-    "            print(\"Setting path to ../model/\")\n",
-    "            PATH_SAVE_MODEL = \"../model/\"\n",
+    "            print(\"Setting path to ../model\")\n",
+    "            PATH_SAVE_MODEL = \"../model\"\n",
     "        print('Saving the model...')\n",
     "        dddqn_agent.save(f'{PATH_SAVE_MODEL}/save_agent_{time.strftime(\"%Y%m%d%H%M\") + \"_\" + str(frame_number).zfill(8)}', \\\n",
     "                             frame_number=frame_number, rewards=rewards, loss_list=loss_list)\n",
