--- a/ppo/nbs/main.ipynb
+++ b/ppo/nbs/main.ipynb
@@ -49,10 +49,10 @@
       "text/html": [
        "\n",
        "                Tracking run with wandb version 0.10.12<br/>\n",
-       "                Syncing run <strong style=\"color:#cdcd00\">effortless-glitter-29</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">fanciful-sun-30</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
        "                Project page: <a href=\"https://wandb.ai/anton-ai/tensorflow2_pong_a2c\" target=\"_blank\">https://wandb.ai/anton-ai/tensorflow2_pong_a2c</a><br/>\n",
-       "                Run page: <a href=\"https://wandb.ai/anton-ai/tensorflow2_pong_a2c/runs/26i4snfx\" target=\"_blank\">https://wandb.ai/anton-ai/tensorflow2_pong_a2c/runs/26i4snfx</a><br/>\n",
-       "                Run data is saved locally in <code>/Users/anton/Projects/reinforcement_learning/ppo/nbs/wandb/run-20210129_122254-26i4snfx</code><br/><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/anton-ai/tensorflow2_pong_a2c/runs/is4r1x7q\" target=\"_blank\">https://wandb.ai/anton-ai/tensorflow2_pong_a2c/runs/is4r1x7q</a><br/>\n",
+       "                Run data is saved locally in <code>/Users/anton/Projects/reinforcement_learning/ppo/nbs/wandb/run-20210129_145028-is4r1x7q</code><br/><br/>\n",
        "            "
       ],
       "text/plain": [
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "%%write_and_run ../src/main.py\n",
+    "%%write_and_run -a ../src/main.py\n",
     "\n",
     "wandb.init(\n",
     "  project=\"tensorflow2_pong_a2c\",\n",
@@ -89,14 +89,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  6%|▌         | 6/100 [00:04<01:12,  1.29it/s]"
+      "  2%|▏         | 2/100 [00:02<01:49,  1.12s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving the model in ../model//save_agent_202101291223\n",
+      "Saving the model in ../model//save_agent_202101291450\n",
       "Saved.\n"
      ]
     },
@@ -109,7 +109,7 @@
     }
    ],
    "source": [
-    "%%write_and_run ../src/main.py\n",
+    "%%write_and_run -a ../src/main.py\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    try:\n",
