--- a/ddpg/nbs/networks.ipynb
+++ b/ddpg/nbs/networks.ipynb
@@ -35,10 +35,10 @@
     "%%write_and_run -a ../src/networks.py\n",
     "\n",
     "class Actor(tf.keras.Model):\n",
-    "    def __init__(self, action_dim, action_bound, hidden_0=ACTOR_HIDDEN_0, hidden_1=ACTOR_HIDDEN_1):\n",
+    "    def __init__(self, action_dim, action_upper_bound, hidden_0=ACTOR_HIDDEN_0, hidden_1=ACTOR_HIDDEN_1):\n",
     "        super().__init__()\n",
     "        self.action_dim = action_dim\n",
-    "        self.action_bound = action_bound\n",
+    "        self.action_upper_bound = action_upper_bound\n",
     "        self.hidden_0 = hidden_0\n",
     "        self.hidden_1 = hidden_1\n",
     "\n",
@@ -51,7 +51,7 @@
     "        x = tf.convert_to_tensor(inputs)\n",
     "        x = self.dense_0(x)\n",
     "        x = self.dense_1(x)\n",
-    "        return self.action(x) * self.action_bound\n",
+    "        return self.action(x) * self.action_upper_bound\n",
     "    \n",
     "class Critic(tf.keras.Model):\n",
     "    def __init__(self, action_dim, hidden_0=CRITIC_HIDDEN_0, hidden_1=CRITIC_HIDDEN_1, hidden_2=CRITIC_HIDDEN_2, hidden_3=CRITIC_HIDDEN_3):\n",
@@ -113,7 +113,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(1, 2), dtype=float32, numpy=array([[ 0.00086423, -0.00356196]], dtype=float32)>"
+       "<tf.Tensor: shape=(1, 2), dtype=float32, numpy=array([[-4.237330e-06, -4.638471e-03]], dtype=float32)>"
       ]
      },
      "execution_count": 6,
@@ -138,6 +138,26 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "critic.get_weights()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "action = np.array((-0.5, 0.5))"
@@ -145,22 +165,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(1, 1), dtype=float32, numpy=array([[0.00996207]], dtype=float32)>"
+       "<tf.Tensor: shape=(1, 1), dtype=float32, numpy=array([[-0.00951107]], dtype=float32)>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "critic(np.random.rand(8, )[None, :], action[None, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = critic.variables"
    ]
   },
   {
